recursion.lessons.recursion.dragoncurve.DragonCurve2.scala.error
DragonCurve2:3: error: not found: value red
		setCouleur(red);
                           ^DragonCurve2:16: error: not found: value blue
		setCouleur(blue);
                           ^