recursion.lessons.recursion.dragoncurve.DragonCurve2.scala.code
def dragon(order:Int, x:Double, y:Double, z:Double, t:Double) {
	if (order == 1) {
		setCouleur(red);
		allerVers(z, t);
	} 
	else {
		val u = (x + z + t - y) / 2;
		val v = (y + t - z + x) / 2;
		dragon(order - 1, x, y, u, v);
		dragonInverse(order - 1, z, t, u, v);
	}
}

def dragonInverse(order:Int, x:Double, y:Double, z:Double, t:Double) {
	if (order == 1) {
		setCouleur(blue);
		allerVers(z, t);
	} 
	else {
		val u = (x + z - t - y) / 2;
		val v = (y + t + z + x) / 2;
		dragon(order - 1, x, y, u, v);
		dragonInverse(order - 1, z, t, u, v);
	}
}
